# EZ-DND

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.cpp
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
Character/: character.hpp  weapons.hpp
Core/: dice.hpp
data/: board.ezdb  fred.ezdc
src/Character/: armor.hpp  character.hpp  weapons.hpp
src/Core/: board.hpp  dice.hpp  network.hpp
test/: coreTest.cpp
